--- a/platform/exp_survey.html
+++ b/platform/exp_survey.html
@@ -49,8 +49,9 @@
   </script>
 </head>
 <body>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0kn6RKYzq2y_ryfveFw48BXMsWlc2Ta6oDN8NcNcxur6evQ/viewform?embedded=true" width="640" height="358" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>  <div class="bottom-bar">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSclo1hFxkItDj6Mgz93Ai8P3pKJPMrHB_nL068SWcHgO26UBQ/viewform?embedded=true" width="640" height="1615" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     Time Remaining: <span id="timer">:10</span>
   </div>
 </body>
 </html>
+
