--- a/platform/platform.html
+++ b/platform/platform.html
@@ -114,6 +114,10 @@
             { src: "tasks/hm5ZyVyLzFeNUUQSa9XV8g-650-80.jpg.webp", time: 5 },
             { src: "tasks/OpticalIllusionIQTestHowmanyAnimalscanyouspot.webp", time: 5 },
             { src: 'puzzle4.png', time: 5 }
+            { src: 'puzzle4.png', time: 5 }
+            { src: 'puzzle4.png', time: 5 }
+            { src: 'puzzle4.png', time: 5 }
+            { src: 'puzzle4.png', time: 5 }
         ];
 
         const audioFile = 'task2-audio.mp3'; // Update with your local audio file name
