--- a/platform/platform.html
+++ b/platform/platform.html
@@ -102,27 +102,27 @@
 
     <script>
         const audioFiles = [
-            '../outdir/audio_1.mp3',
-            '../outdir/audio_2.mp3',
-            '../outdir/audio_3.mp3',
-            '../outdir/audio_4.mp3',
-            '../outdir/audio_5.mp3',
-            '../outdir/audio_6.mp3',
-            '../outdir/audio_7.mp3',
-            '../outdir/audio_8.mp3',
-            '../outdir/audio_9.mp3',
-            '../outdir/audio_10.mp3'
+            '../indir/auditoryText/audio_1.mp3',
+            '../indir/auditoryText/audio_2.mp3',
+            '../indir/auditoryText/audio_3.mp3',
+            '../indir/auditoryText/audio_4.mp3',
+            '../indir/auditoryText/audio_5.mp3',
+            '../indir/auditoryText/audio_6.mp3',
+            '../indir/auditoryText/audio_7.mp3',
+            '../indir/auditoryText/audio_8.mp3',
+            '../indir/auditoryText/audio_9.mp3',
+            '../indir/auditoryText/audio_10.mp3'
         ];
 
         const imagePages = [
-            { src: "tasks/Dog-optical-illusion.jpg", instruction: "Find the hidden facein the image.", time: 60 },
-            { src: "tasks/faceInCoffeeBean.jpg", instruction: "Spot the face hidden in coffee beans.", time: 60 },
-            { src: 'tasks/HiddenTiger.jpg', instruction: "Locate the hidden tiger in the image.", time: 60 },
-            { src: 'tasks/countHumanFaces.webp', instruction: "Count the total number of human faces.", time: 60 },
-            { src: 'tasks/horseFaces.webp', instruction: "Identify how many horse faces you can see.", time: 60 },
-            { src: 'tasks/HowmanyAnimals.webp', instruction: "Count how many different animals you can spot.", time: 60 },
-            { src: 'tasks/sixteenFaces.jpg', instruction: "How many faces are there in the picture?", time: 60 },
-            { src: 'tasks/thirteenHiddenFaces.webp', instruction: "Can you find all thirteen hidden faces.", time: 60 }
+            { src: "../indir/visuospatial/Dog-optical-illusion.jpg", instruction: "Find the hidden facein the image.", time: 60 },
+            { src: "../indir/visuospatial/faceInCoffeeBean.jpg", instruction: "Spot the face hidden in coffee beans.", time: 60 },
+            { src: '../indir/visuospatial/HiddenTiger.jpg', instruction: "Locate the hidden tiger in the image.", time: 60 },
+            { src: '../indir/visuospatial/countHumanFaces.webp', instruction: "Count the total number of human faces.", time: 60 },
+            { src: '../indir/visuospatial/horseFaces.webp', instruction: "Identify how many horse faces you can see.", time: 60 },
+            { src: '../indir/visuospatial/HowmanyAnimals.webp', instruction: "Count how many different animals you can spot.", time: 60 },
+            { src: '../indir/visuospatial/sixteenFaces.jpg', instruction: "How many faces are there in the picture?", time: 60 },
+            { src: '../indir/visuospatial/thirteenHiddenFaces.webp', instruction: "Can you find all thirteen hidden faces.", time: 60 }
         ];
 
         const pages = [
