--- a/platform/step1.html
+++ b/platform/step1.html
@@ -1,61 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Form with Timer</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    iframe {
-      width: 100%;
-      height: calc(100vh - 50px);
-      border: none;
-    }
-    .bottom-bar {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 50px;
-      background-color: #333;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-    }
-  </style>
-  <script>
-    let timerDuration = 5; // Timer duration in seconds
-
-    function startTimer() {
-      const timerElement = document.getElementById('timer');
-      const countdown = setInterval(() => {
-        const minutes = Math.floor(timerDuration / 60);
-        const seconds = timerDuration % 60;
-        timerElement.textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
-        if (timerDuration === 0) {
-          clearInterval(countdown);
-          window.location.href = 'survey2.html'; 
-        }
-        timerDuration--;
-      }, 1000);
-    }
-
-    window.onload = startTimer;
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Step 1: Welcome</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <h2>Text Instruction</h2>
-    <ul>
-        <li>This is instruction bullet point 1.</li>
-        <li>This is instruction point 2.</li>
-        <div class="bottom-bar"></div>
-        Time Remaining: <span id="timer">:10</span>
-    </ul>
+    <div class="logo-container" id="logo1">
+        <img src="visuals/music-logo-v-3-4.png" alt="Logo 1" class="logo">
+    </div>
+
+    <div class="logo-container" id="logo3">
+        <img src="visuals/unipg_marchio_negativo.png" alt="Logo 3" class="logo">
+    </div>
+
+    <div class="logo-container" id="logo4">
+        <img src="visuals/EU-logo.png" alt="Logo 4" class="logo">
+    </div>
+
+    <div class="container">
+        <h4>presents</h4>
+        <h1>DC1 "Steady-state Neurological Reaction and Perception"</h1>
+        <h2>Welcome! Get ready to embark on this experiment.</h2>
+        <button onclick="nextPage()">Start</button>
+    </div>
+
+    <script>
+        function nextPage() {
+            window.location.href = "step2.html";
+        }
+    </script>
 </body>
 </html>
