minor platfomr update

--- a/platform/finish.html
+++ b/platform/finish.html
@@ -9,10 +9,11 @@
 <body>
     <div class="container">
         <h1>Thank you for participating in the experiment.</h1>
+        <h4>Please remain seated as we provide final instructions.</h4>
         <!-- <h2>We appreciate your contribution to our research.</h2> -->
-        <h4>Your responses and efforts will help us gain valuable insights.</h4>
-        <h4>If you have any questions or need further information, feel free ask.</h4>
-        <h4>Please be seated for further instructions.</h4>
+        <h4>Your responses and efforts have been invaluable. We truly appreciate it.</h4>
+        <h4>If you have any questions or would like further information, feel free to ask.</h4>
+        
         
     </div>
 </body>
