--- a/platform/step2.html
+++ b/platform/step2.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h2>Acclimation Time in progress...</h2>
+        <h3>Please read the following instructions carefully:</h3>
         <div class="timer-container">
             <svg class="timer-svg" width="150" height="150">
                 <circle class="timer-circle-bg" cx="75" cy="75" r="70"></circle>
