--- a/platform/start.html
+++ b/platform/start.html
@@ -29,7 +29,7 @@
 
     <script>
         function nextPage() {
-            window.location.href = "acclimation.html";
+            window.location.href = "survey1.html";
         }
     </script>
 </body>
