--- a/platform/survey2_1.html
+++ b/platform/survey2_1.html
@@ -48,7 +48,7 @@
             container.innerHTML = pages[index].content;
             startTimer(pages[index].time, () => {
                 if (++currentPage < pages.length) loadPage(currentPage);
-                else window.location.href = "step7.html";
+                else window.location.href = "task2.html";
             });
         }
 
