--- a/platform/acclimation.html
+++ b/platform/acclimation.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Acclimation Time in progress...</h2>
-        <h3>Please read the following instructions carefully:</h3>
+        <h3>Please wait for the instructions and read them carefully:</h3>
         <div class="timer-container">
             <svg class="timer-svg" width="150" height="150">
                 <circle class="timer-circle-bg" cx="75" cy="75" r="70"></circle>
@@ -44,7 +44,7 @@
             }, 1000);
         }
 
-        startTimer(150, () => window.location.href = "survey1.html");
+        startTimer(150, () => window.location.href = "baseline.html");
     </script>
     <script src="dynamicText.js"></script>
     
