--- a/platform/task1.html
+++ b/platform/task1.html
@@ -10,28 +10,27 @@
     <div id="page-container" class="container"></div>
 
     <script>
-        const audioFiles = Array.from({ length: 10 }, (_, i) => `../indir/auditoryText/audio_${i + 1}.mp3`);
+        const audioFiles = Array.from({ length: 10 }, (_, i) => `auditoryText/audio_${i + 1}.mp3`);
 
         const pages = [
             { 
                 content: `
                     <h1>Welcome to Verbal-Semantic Task</h1>
-                    <h2>Next page you will see an audio file. Your task is to listen and identify if the audio   statement has semantic inconsistency (i.e.something that doesn’t logically fit or incorrect), and select one option based on audio description.</h2>
-                    ${timerTemplate()}
+                    <h2>Next page you will see an audio file. <br> Play and listen the audio and identify if the audio statement has semantic inconsistency (i.e., something that doesn’t logically fit or is incorrect).</h2>
+                    <button id="next-button">Next</button>
                 `, 
-                time: 20 
+                time: 0 // No timer for the first page
             },
             ...audioFiles.map((audioSrc, index) => ({
                 content: `
                     <h2>Audio Statement ${index + 1}</h2>
-                    <h3>Click on play-icon and listen the audio statement. <br>Replay audio if needed, and select the desired option.</h3> 
+                    <h3>Click on play-icon and listen to the audio statement. <br>Replay audio if needed, and select the desired option.</h3> 
                     <audio controls><source src="${audioSrc}" type="audio/mpeg">Your browser does not support the audio element.</audio>
                     <div class="options">
                         <label><input type="checkbox" name="audioQ${index + 1}"> <span>Option A: There was INCONSISTENCY in the sentence.</span></label> <br>
                         <label><input type="checkbox" name="audioQ${index + 1}"> <span>Option B: There was NO INCONSISTENCY in the sentence.</span></label> <br>
-                         <label><input type="checkbox" name="audioQ${index + 1}"> <span>Option C: There was INCONSISTENCY in the sentence but was CORRECTED.</span></label> <br>
+                        <label><input type="checkbox" name="audioQ${index + 1}"> <span>Option C: There was INCONSISTENCY in the sentence but was CORRECTED.</span></label> <br>
                     </div>
-
                     ${timerTemplate()}
                 `,
                 time: 60
@@ -55,10 +54,26 @@
 
         function loadPage(index) {
             container.innerHTML = pages[index].content;
-            startTimer(pages[index].time, () => {
-                if (++currentPage < pages.length) loadPage(currentPage);
-                else window.location.href = "survey2_1.html";
-            });
+
+            // Add event listener for the "Next" button on the first page
+            if (index === 0) {
+                const nextButton = document.getElementById("next-button");
+                nextButton.addEventListener("click", () => {
+                    // Start playing the background audio
+                    const backgroundAudio = document.getElementById("background-audio");
+                    backgroundAudio.play();
+
+                    // Load the next page
+                    currentPage++;
+                    loadPage(currentPage);
+                });
+            } else {
+                // Start the timer for subsequent pages
+                startTimer(pages[index].time, () => {
+                    if (++currentPage < pages.length) loadPage(currentPage);
+                    else window.location.href = "survey2_1.html";
+                });
+            }
         }
 
         function startTimer(seconds, callback) {
@@ -81,19 +96,14 @@
             }, 1000);
         }
 
+        // Load the first page
         loadPage(currentPage);
     </script>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        let audio = document.createElement("audio");
-        audio.id = "background-audio";
-        audio.src = "audio/10HzAlphaBinauralBeats.mp3";
-        audio.autoplay = true;
-        audio.loop = true;
-        document.body.appendChild(audio);
-    });
-</script>
-
+    <!-- Background Audio Element -->
+    <audio id="background-audio" loop>
+        <source src="auditoryBeats/10HzBinauralBeats.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
